--- a/components/step-indicator.html
+++ b/components/step-indicator.html
@@ -1,22 +1,14 @@
 <nav>
-
-    <h1>Finish your order</h1>
-
-    <progress value="0.25" max="1">25%</progress>
-
-    <ol>
-        <li>
-            <a href="/cart">Cart</a>
-        </li>
-        <li>
-            <a href="#main-content" aria-label="Address, current step">Address</a>
-        </li>
-        <li>
-            Payment
-        </li>
-        <li>
-            Confirm
-        </li>
-    </ol>
-
+  <h1>Finish your order</h1>
+	<progress value="0.25" max="1">25%</progress>
+	<ol>
+  	<li>
+      <a href="/cart">Cart</a>
+    </li>
+    <li>
+      <a href="#main-content" aria-label="Address, current step">Address</a>
+    </li>
+    <li>Payment</li>
+    <li>Confirm</li>
+  </ol>
 </nav>
