--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -162,6 +162,7 @@ header nav li:focus-within {
   animation-duration: 450ms;
   animation-timing-function: linear;
   animation-fill-mode: forwards;
+	box-shadow: 0.5em 0.5em 1em black;
 }
 
 @keyframes bounceIn{
@@ -187,6 +188,7 @@ header nav li:focus-within {
 section {
 	grid-area: section;
 	grid-row:2;
+	margin-top: -3em;
 }
 
 section figure {
@@ -228,6 +230,9 @@ article {
 	grid-area: article;
 	grid-row:3;
 	z-index: 10;
+	width: 90vw;
+	margin-left: 5vw;
+	margin-bottom: 5vh;
 }
 
 article h1 {
@@ -245,14 +250,64 @@ article p {
 	color: darkgrey;
 }
 
+article figure img {
+	width: 80vw;
+	height: auto;
+	margin: 2em 0;
+}
+
+article footer {
+	font-family: Questrial;
+	font-size: 1em;
+	color: #F1C25B;
+	margin-top: 1em;
+}
+
+article footer a::before {
+	content:" - ";
+	background-color: white;
+	color: #F1C25B;
+}
+
+article footer a {
+	display: inline-block;
+	font-family: Questrial;
+	font-size: 1em;
+	background-color: #F1C25B;
+	color: white;
+	text-decoration: none;
+}
+
+article footer a:focus {
+	animation: shake 1s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+}
+
 @media screen and (min-width: 50em) {
 	article {
 		grid-column: 4 / 6;
 	  grid-row: 2;
+		width: auto;
+		margin-left: 0;
 	}
-}
 
-article figure img {
-	width: 30vw;
-	height: auto;
+	article figure img {
+		width: 30vw;
+		height: auto;
+		margin: 0;
+	}
 }
