--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -39,7 +39,7 @@ src: local('Questrial'), url('../fonts/Questrial-Regular.woff') format('woff');
 body {
 	display: grid;
 	grid-template-columns: 1fr;
-	grid-template-rows: 3fr;
+	grid-template-rows: auto;
 }
 
 @media screen and (min-width: 50em) {
@@ -191,7 +191,7 @@ header nav li:focus-within {
 }
 
 /* css mix-blend-mode */
-section {
+section:first-of-type {
 	grid-area: section;
 	grid-row:2;
 	margin-top: -3em;
@@ -213,7 +213,7 @@ video {
 }
 
 @media screen and (min-width: 50em) {
-	section {
+	section:first-of-type {
 		grid-column: 2 / 6;
 		grid-row: 2;
 	}
@@ -229,6 +229,28 @@ video {
 		width: 65vw;
 		margin-left: 0;
 	}
+}
+
+/* grid layout blog page */
+#first {
+	grid-column: 2 / 5;
+	grid-row: 3;
+}
+
+#second {
+	grid-column: 2 / 5;
+	grid-row: 4;
+}
+
+#third {
+	grid-column: 2 / 5;
+	grid-row: 5;
+}
+
+section:nth-of-type(4){
+	grid-column: 5 / 6;
+	grid-row: 2 / 4;
+	background-color: lightgrey;
 }
 
 /* article */
