--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -9,6 +9,14 @@
 	outline:0 !important;
 }
 
+/* variables */
+:root {
+	--mainColor: #F1C25B;
+	--secondColor: #4D8267;
+	--fontColor: #55555b;
+	--backgroundColor: #6C9584;
+}
+
 /* fonts */
 @font-face {
 font-family: "FontAwesome";
@@ -35,11 +43,24 @@ src: local('Questrial'), url('../fonts/Questrial-Regular.woff') format('woff');
 	unicode-range: U+26;
 }
 
-/* layout grid */
+/* layout grid, global styles and inforced inheritance*/
+* {
+	font-family: inherit;
+}
+
 body {
 	display: grid;
 	grid-template-columns: 1fr;
 	grid-template-rows: auto;
+	font-family: Questrial, sans-serif;
+}
+
+p::selection, img::selection {
+	background-color: var(--mainColor);
+}
+
+h1::selection, h2::selection {
+	background-color: var(--fontColor);
 }
 
 @media screen and (min-width: 50em) {
@@ -51,7 +72,6 @@ body {
 
 /* header nav menu */
 header {
-	grid-area: header;
 	grid-row:1;
 }
 
@@ -88,10 +108,16 @@ header nav li:nth-of-type(2) {
 	flex-basis: 45vw;
 }
 
-header nav a[href='ideas.html']:after {
+header nav a[href='blog.html']:after {
+	position: relative;
+	left: 4em;
 	content: "\f078";
 	font-family: FontAwesome;
-	margin-left: 1em;
+	font-size: 0.5em;
+}
+
+header nav li:focus-within a[href='blog.html']:after {
+	content: "\f077";
 }
 
 header nav li:nth-of-type(3) {
@@ -115,10 +141,10 @@ header nav li ul {
 }
 
 header nav li ul li {
-	background-color: #F1C25B;
+	background-color: var(--mainColor);
 }
 
-header nav li:nth-of-type(2):focus-within ul {
+header nav li:focus-within ul {
 	display: block;
 }
 
@@ -140,7 +166,7 @@ header nav li:nth-of-type(2):focus-within ul {
 		border: 0.5vw solid black;
 	}
 
-	header nav li:nth-of-type(1n+1) {
+	header nav li {
 		margin-right: 1em;
 	}
 
@@ -149,7 +175,6 @@ header nav li:nth-of-type(2):focus-within ul {
 	}
 
 	header nav li:nth-of-type(2) ul {
-		display: none;
 		flex-direction: column;
 		justify-content: flex-start;
 	}
@@ -195,10 +220,10 @@ header nav li:focus-within {
 }
 
 /* css mix-blend-mode */
-section:first-of-type {
-	grid-area: section;
-	grid-row:2;
-	margin-top: -3em;
+main {
+	grid-row: 2;
+	width: 90vw;
+	margin-left: 5vw;
 }
 
 section figure {
@@ -217,14 +242,22 @@ video {
 }
 
 @media screen and (min-width: 50em) {
-	section:first-of-type {
+	main {
 		grid-column: 2 / 6;
-		grid-row: 2;
+		width: 100vw;
+		margin-left: 0;
+		display: grid;
+		grid-template-columns: 20% 20% 20% 20%;
+		grid-template-rows: minmax(auto, auto);
+	}
+
+	section:first-of-type {
+		grid-column: 1 / 4;
+		grid-row: 1;
 	}
 
 	section figure {
 		position: relative;
-		bottom:5.5em;
 		right: 4.5em;
 		width: 70vw;
 	}
@@ -235,35 +268,10 @@ video {
 	}
 }
 
-/* grid layout blog page */
-#first {
-	grid-column: 2 / 5;
-	grid-row: 3;
-}
-
-#second {
-	grid-column: 2 / 5;
-	grid-row: 4;
-}
-
-#third {
-	grid-column: 2 / 5;
-	grid-row: 5;
-}
-
-section:nth-of-type(4){
-	grid-column: 5 / 6;
-	grid-row: 2 / 4;
-	background-color: lightgrey;
-}
-
 /* article */
 article {
-	grid-area: article;
-	grid-row:3;
+	grid-row:2;
 	z-index: 10;
-	width: 90vw;
-	margin-left: 5vw;
 	margin-bottom: 5vh;
 }
 
@@ -271,15 +279,14 @@ article h1 {
 	font-size: 2em;
 	font-family: Ampersand, Questrial;
 	font-weight: bold;
-	color: #F1C25B;
+	color: var(--mainColor);
 	margin-bottom: 1em;
 }
 
 article p {
-	font-family: Questrial;
 	font-size: 1em;
 	line-height: 1.5em;
-	color: darkgrey;
+	color: var(--fontColor);
 }
 
 article figure img {
@@ -289,23 +296,21 @@ article figure img {
 }
 
 article footer {
-	font-family: Questrial;
 	font-size: 1em;
-	color: #F1C25B;
+	color: var(--mainColor);
 	margin-top: 1em;
 }
 
 article footer a::before {
 	content:" - ";
 	background-color: white;
-	color: #F1C25B;
+	color: var(--mainColor);
 }
 
 article footer a {
 	display: inline-block;
-	font-family: Questrial;
 	font-size: 1em;
-	background-color: #F1C25B;
+	background-color: var(--mainColor);
 	color: white;
 	text-decoration: none;
 }
@@ -331,8 +336,8 @@ article footer a:focus {
 
 @media screen and (min-width: 50em) {
 	article {
-		grid-column: 4 / 6;
-	  grid-row: 2;
+		grid-column: 3 / 5;
+	  grid-row: 1;
 		width: auto;
 		margin-left: 0;
 	}
@@ -344,7 +349,40 @@ article footer a:focus {
 	}
 }
 
-/* rating page */
-fieldset {
 
+/* blog page */
+section:nth-of-type(4){
+	background-color: var(--backgroundColor);
 }
+
+/* two column layout  */
+@media screen and (min-width: 50em) {
+	.two-column-layout section:first-of-type {
+		grid-column: 1 / 4;
+	}
+
+	.two-column-layout section:nth-of-type(2) {
+		grid-column: 1 / 4;
+		grid-row: 2;
+	}
+
+	.two-column-layout section:nth-of-type(3) {
+		grid-column: 1 / 4;
+		grid-row: 3;
+	}
+
+	.two-column-layout section:nth-of-type(4) {
+		grid-column: 4 / 5;
+		grid-row: 1 / 2;
+		background-color: var(--backgroundColor);
+	}
+}
+
+/* one column layout */
+@media screen and (min-width: 50em) {
+	.one-column-layout section {
+		grid-column: 1 / 5;
+	}
+}
+
+/* rating page */
