--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,11 +2,15 @@
 * {
 	margin: 0;
 	padding: 0;
+}
+
+body {
 	overflow-x: hidden;
 }
 
 *:focus {
 	outline:0 !important;
+	background-color: var(--mainColor); /* gaat nog aangepast worden */
 }
 
 /* variables */
@@ -59,8 +63,8 @@ p::selection, img::selection {
 	background-color: var(--mainColor);
 }
 
-h1::selection, h2::selection {
-	background-color: var(--fontColor);
+h1::selection, h2::selection, a::selection, figcaption::selection, footer::selection, time::selection {
+	background-color: var(--secondColor);
 }
 
 @media screen and (min-width: 50em) {
@@ -349,38 +353,169 @@ article footer a:focus {
 	}
 }
 
-
 /* blog page */
+section article {
+	width: 90%;
+	padding: 5%;
+	background-color: rgba(0,0,0,0.01)
+}
+
+section article h1 a {
+	display: block;
+	color: black;
+	line-height: 150%;
+}
+
+progress[value] {
+	-webkit-appearance: none;
+	appearance: none;
+
+	width: 90%;
+	height: 1em;
+	margin-bottom: 2em;
+}
+
+progress[value]::-webkit-progress-bar {
+  background-color: white;
+	border-radius: 2em;
+  box-shadow: 0 0.1em 0.2em rgba(0, 0, 0, 0.25) inset;
+}
+
+progress[value]::-webkit-progress-value {
+	background-color: var(--fontColor);
+	border-radius: 2em;
+}
+
 section:nth-of-type(4){
 	background-color: var(--backgroundColor);
 }
 
+article nav {
+	background-color: var(--secondColor);
+	width: 94%;
+	padding: 3%;
+}
+
+article nav h1 {
+	color: white;
+}
+
+nav ol {
+	list-style: none;
+	display: flex;
+	flex-direction: row;
+	width: 90%;
+}
+
+nav ol li {
+	flex-basis: 25%;
+	text-align: center;
+	color: white;
+}
+
+nav ol li a {
+	color: white;
+}
+
+section article img {
+	width: 100%;
+}
+
+section article img + p {
+	margin-top: 5%;
+}
+
+@media screen and (min-width: 50em) {
+	section article {
+		width: 85%;
+	}
+}
+
+/* chat */
+section > ol {
+	box-sizing: border-box;
+	list-style: none;
+	padding: 10%;
+}
+
+ol + form {
+	padding: 10%;
+}
+
+section > ol li {
+	border-radius: 1.1em;
+	margin-bottom: 5%;
+}
+
+section > ol li > p {
+	padding: 10%;
+	background-color: white;
+	order: 1;
+	border-top-left-radius: 0px;
+	box-shadow: -1px 2px 0px #D4D4D4;
+}
+
+section > ol li > p {
+  display:block;
+  border-radius: 0.375em;
+  position: relative;
+}
+
+section > ol li:nth-child(odd) > p:after {
+  content: "";
+  position:absolute;
+  margin-top:-0.375em;
+  margin-left:-0.3125em;
+  border-left: 0.75em solid transparent;
+  border-right: 0.75em solid transparent;
+  border-bottom: 0.75em solid white;
+  transform:rotate(-45deg);
+  right: -0.9375em;
+  top: 0.625em;
+}
+
+section > ol footer {
+	margin-top: 10%;
+	font-style: italic;
+	font-size: 0.8em;
+	text-align: right;
+}
+
+section > ol li:nth-child(even) footer {
+	text-align: left;
+}
+
+button {
+
+}
+
 /* two column layout  */
 @media screen and (min-width: 50em) {
-	.two-column-layout section:first-of-type {
+	.two-column-layout + body main section:first-of-type {
 		grid-column: 1 / 4;
 	}
 
-	.two-column-layout section:nth-of-type(2) {
+	.two-column-layout + body main section:nth-of-type(2) {
 		grid-column: 1 / 4;
 		grid-row: 2;
 	}
 
-	.two-column-layout section:nth-of-type(3) {
+	.two-column-layout + body main section:nth-of-type(3) {
 		grid-column: 1 / 4;
 		grid-row: 3;
 	}
 
-	.two-column-layout section:nth-of-type(4) {
+	.two-column-layout + body main section:nth-of-type(4) {
 		grid-column: 4 / 5;
 		grid-row: 1 / 2;
-		background-color: var(--backgroundColor);
+		background-color: var(--mainColor);
+
 	}
 }
 
 /* one column layout */
 @media screen and (min-width: 50em) {
-	.one-column-layout section {
+	.one-column-layout + body main section {
 		grid-column: 1 / 5;
 	}
 }
