--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -22,11 +22,15 @@ body {
 	--florarWhite: florarWhite;
 }
 
+*::selection {
+	background-color: #3E6D3C;
+}
+
 /* fonts */
 @font-face {
-font-family: "FontAwesome";
-font-weight: normal;
-font-style : normal;
+	font-family: "FontAwesome";
+	font-weight: normal;
+	font-style : normal;
 	src: url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.eot?v=4.3.0");
 	src: url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.eot?#iefix&v=4.3.0") format("embedded-opentype"),
 	     url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/fonts/fontawesome-webfont.woff2?v=4.3.0") format("woff2"),
@@ -36,10 +40,10 @@ font-style : normal;
 }
 
 @font-face {
-font-family: 'Questrial';
-font-style: normal;
-font-weight: normal;
-src: local('Questrial'), url('../fonts/Questrial-Regular.woff') format('woff');
+	font-family: 'Questrial';
+	font-style: normal;
+	font-weight: normal;
+	src: local('Questrial'), url('../fonts/Questrial-Regular.woff') format('woff');
 }
 
 @font-face {
@@ -58,10 +62,6 @@ body {
 	grid-template-columns: 1fr;
 	grid-template-rows: auto;
 	font-family: Questrial, sans-serif;
-}
-
-*::selection {
-	background-color: #3E6D3C;
 }
 
 @media screen and (min-width: 50em) {
@@ -94,27 +94,26 @@ header nav ul {
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: space-around;
-	list-style: none;
 	align-items: flex-start;
-
+	list-style: none;
 }
 
 header nav li {
+	position: relative;
 	margin-bottom: 1em;
 	text-align: center;
-	position: relative;
 	z-index: 1;
 }
 
 header nav li::before {
 	content: "";
+	width: 0.625em;
   position: absolute;
-  z-index: -1;
-  width: 0.625em;
   right: 0;
   top: 0;
   bottom: 0;
   background-color: rgba(0,10,50,0.2);
+	z-index: -1;
 }
 
 header nav li::after {
@@ -130,17 +129,14 @@ header nav li::after {
 }
 
 header nav li:hover::before, header nav li:focus-within::before {
-	transform: translate3D(0.625em, 0, 0);
+	transform: translate3D(0.625em, 0, 0); /* translateX */
 }
 
 header nav li:active::before {
 	transform: translate3D(0, 0, 0);
 }
 
-header nav li:active {
-	outline: none;
-}
-
+/* li sizes one-column layout */
 header nav li:first-of-type {
 	flex-basis: 50vw;
 }
@@ -157,10 +153,12 @@ header nav li:last-of-type {
 	flex-basis: 47vw;
 }
 
+/* global a */
 a {
 	display: block;
 	text-decoration: none;
 	color: black;
+	cursor: pointer;
 }
 
 a:focus, a:hover {
@@ -168,13 +166,13 @@ a:focus, a:hover {
 }
 
 header nav a {
+	display: block;
+	width: 100%;
+	height: 100%;
 	font-family: monospace;
 	font-size: 1.2em;
 	padding: 1em 1.5em;
   background-color: #fbfbfb;
-	display: block;
-  width: 100%;
-  height: 100%;
 }
 
 header nav a:focus, header nav a:hover {
@@ -477,7 +475,8 @@ section:nth-of-type(4){
 	background-image:
 	linear-gradient(90deg, transparent 79px, #abced4 79px, #abced4 81px, transparent 81px),
 	linear-gradient(#eee .1em, transparent .1em);
-	background-size: 100% 1.2em;}
+	background-size: 100% 1.5em;
+}
 
 article nav {
 	background-color: var(--secondColor);
@@ -653,7 +652,6 @@ button[type='submit']:focus {
 	.two-column-layout + body main section:nth-of-type(4) {
 		grid-column: 4 / 5;
 		grid-row: 1 / 2;
-		background-color: #fff;
 		background-image: url('../img/skyscraper.png');
 
 	}
